# pedantic-python-decorators

./: .coveragerc  .gitignore  .travis.yaml  .travis.yml  CHANGELOG.md  README.md  SECURITY.md  Taskfile.yml  build_wheel.bat  create_pdoc.bat  create_pdoc.sh  create_requirements.bat  example.py  get_changelog.sh  get_coverage.bat  pyproject.toml  requirements.txt  setup.py  test_deployment.py  type_hint_parser_dependency_graph.graphml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: main.yml
PythonHelpers/: __init__.py  class_decorators.py  custom_exceptions.py  decorators.py  helper_functions.py  method_decorators.py  type_hint_parser.py
PythonHelpers/unit_tests/: tests_class_decorators.py  tests_main.py  tests_require_docstrings_google_format.py  tests_require_kwargs.py  tests_require_kwargs_and_type_check.py  tests_small_method_decorators.py
docs/: index.html  pedantic.html  search.js
docs/pedantic/: basic_helpers.html  check_docstring.html  check_generic_classes.html  check_types.html  class_decorators.html  constants.html  custom_exceptions.html  decorators.html  env_var_logic.html  examples.html  exceptions.html  get_context.html  helper_methods.html  index.html  method_decorators.html  mixins.html  models.html  set_envionment_variables.html  type_checking_logic.html  type_hint_parser.html  wrapper_docstring.html
docs/pedantic/decorators/: class_decorators.html  cls_deco_frozen_dataclass.html  fn_deco_context_manager.html  fn_deco_count_calls.html  fn_deco_deprecated.html  fn_deco_does_same_as_function.html  fn_deco_in_subprocess.html  fn_deco_mock.html  fn_deco_overrides.html  fn_deco_pedantic.html  fn_deco_rename_kwargs.html  fn_deco_require_kwargs.html  fn_deco_retry.html  fn_deco_timer.html  fn_deco_trace.html  fn_deco_trace_if_returns.html  fn_deco_unimplemented.html  fn_deco_validate.html  fn_deco_validate_args.html  index.html
docs/pedantic/examples/: index.html  validate.html
docs/pedantic/mixins/: generic_mixin.html  index.html  with_decorated_methods.html
docs/pedantic/models/: decorated_function.html  function_call.html  generator_wrapper.html  index.html
docs/pedantic/tests/: index.html  test_assert_value_matches_type.html  test_async_context_manager.html  test_context_manager.html  test_frozen_dataclass.html  test_generator_wrapper.html  test_generic_mixin.html  test_in_subprocess.html  test_rename_kwargs.html  test_resolve_forward_ref.html  test_retry.html  test_with_decorated_methods.html  tests_class_decorators.html  tests_combination_of_decorators.html  tests_decorated_function.html  tests_docstring.html  (+13 more)
examples/: config.csv  validate.py
html/pedantic/: class_decorators.html  index.html  method_decorators.html  type_hint_parser.html
pedantic/: __init__.py  basic_helpers.py  check_docstring.py  check_generic_classes.py  check_types.py  class_decorators.py  combine_decorators.py  constants.py  custom_exceptions.py  env_var_logic.py  exceptions.py  get_context.py  helper_fn.py  helper_methods.py  method_decorators.py  set_envionment_variables.py  type_hint_parser.py  wrapper_docstring.py
pedantic/decorators/: __init__.py  class_decorators.py  cls_deco_frozen_dataclass.py  deprecated.py  fn_deco_context_manager.py  fn_deco_count_calls.py  fn_deco_deprecated.py  fn_deco_does_same_as_function.py  fn_deco_in_subprocess.py  fn_deco_mock.py  fn_deco_overrides.py  fn_deco_pedantic.py  fn_deco_rename_kwargs.py  fn_deco_require_kwargs.py  fn_deco_retry.py  fn_deco_timer.py  fn_deco_trace.py  fn_deco_trace_if_returns.py  fn_deco_unimplemented.py  fn_deco_validate_args.py  frozen_dataclass.py  helpers.py  in_subprocess.py  overrides.py  pedantic_decorator.py  retry.py  safe_context_manager.py
pedantic/examples/: validate.py
pedantic/mixins/: __init__.py  generic_mixin.py  with_decorated_methods.py
pedantic/models/: __init__.py  decorated_function.py  function_call.py  generator_wrapper.py
pedantic/tests/: test_assert_value_matches_type.py  test_async_context_manager.py  test_context_manager.py  test_frozen_dataclass.py  test_generator_wrapper.py  test_generic_mixin.py  test_in_subprocess.py  test_rename_kwargs.py  test_resolve_forward_ref.py  test_retry.py  test_typeguard.py  test_validate.py  test_with_decorated_methods.py  tests_class_decorators.py  tests_combination_of_decorators.py  tests_decorated_function.py  tests_docstring.py  tests_doctests.py  tests_environment_variables.py  tests_generator.py  tests_generic_classes.py  tests_main.py  tests_mock.py  tests_pedantic.py  tests_pedantic_async.py  tests_pedantic_class.py  tests_pedantic_class_docstring.py  tests_pedantic_python_311.py  tests_require_kwargs.py  tests_small_method_decorators.py  tests_tg.py
pedantic/type_checking_logic/: __init__.py  check_docstring.py  check_generic_classes.py  check_types.py  resolve_forward_ref.py
pedantic/unit_tests/: test_typeguard.py  tests_assertion_error_3_6.py  tests_class_decorators.py  tests_combination_of_decorators.py  tests_docstring.py  tests_doctests.py  tests_environment_variables.py  tests_generator.py  tests_generic_classes.py  tests_main.py  tests_pedantic.py  tests_pedantic_async.py  tests_pedantic_class.py  tests_pedantic_class_docstring.py  tests_require_docstrings_google_format.py  tests_require_kwargs.py  tests_require_kwargs_and_type_check.py  tests_small_method_decorators.py  tests_tg.py
tests/: conftest.py  test_environment_variables.py  test_helper_fn.py  test_the_tests.py
tests/decorators/: test_async_context_manager.py  test_class_decorators.py  test_combination_of_decorators.py  test_context_manager.py  test_deprecated.py  test_docstring.py  test_frozen_dataclass.py  test_in_subprocess.py  test_mock.py  test_overrides.py  test_rename_kwargs.py  test_require_kwargs.py  test_retry_decorator.py  test_retry_func.py  test_small_method_decorators.py  test_trace.py
tests/mixins/: test_generic_mixin.py  test_with_decorated_methods.py
tests/models/: test_decorated_function.py  test_generator_wrapper.py
tests/type_checking_logic/: test_assert_value_matches_type.py  test_resolve_forward_ref.py
(+175 files in other folders)
