[build-system]
requires = ["setuptools>=80.9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pedantic"
version = "3.0.0"
description = "Some useful Python decorators for cleaner software development."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  {name = "Willi Sontopski", email = "willi_sontopski@arcor.de"},
]
maintainers = [
  {name = "Willi Sontopski", email = "willi_sontopski@arcor.de"},
]
keywords = ["decorators", "tools", "helpers", "type-checking", "pedantic", "type annotations"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
"Bug Tracker" = "https://github.com/LostInDarkMath/pedantic-python-decorators/issues"
"Documentation" = "https://lostindarkmath.github.io/pedantic-python-decorators/pedantic/"
"Source Code" = "https://github.com/LostInDarkMath/pedantic-python-decorators"

[project.optional-dependencies]
# poetry install --extras dev
# pip install .[dev]
dev = [
  "docstring-parser==0.17",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
  "Flask[async]==3.1.2",
  "multiprocess==0.70.19",
  "Werkzeug==3.1.5",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
python_files = ["*.py"]
