[build-system]
requires = ["setuptools>=80.9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pedantic"
version = "3.0.0"
description = "Some useful Python decorators for cleaner software development."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  {name = "Willi Sontopski", email = "willi_sontopski@arcor.de"},
]
maintainers = [
  {name = "Willi Sontopski", email = "willi_sontopski@arcor.de"},
]
keywords = ["decorators", "tools", "helpers", "type-checking", "pedantic", "type annotations"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
"Bug Tracker" = "https://github.com/LostInDarkMath/pedantic-python-decorators/issues"
"Documentation" = "https://lostindarkmath.github.io/pedantic-python-decorators/pedantic/"
"Source Code" = "https://github.com/LostInDarkMath/pedantic-python-decorators"

[project.optional-dependencies]
# poetry install --extras dev
# pip install .[dev]
dev = [
  "docstring-parser==0.17",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
  "Flask[async]==3.1.2",
  "multiprocess==0.70.19",
  "ruff==0.15.1",
  "Werkzeug==3.1.5",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
python_files = ["*.py"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401", #  Dynamically typed expressions (typing.Any) are disallowed in
  "D100", # Missing docstring in public module
  "D104",  # Missing docstring in public package
  "D105",  #  Missing docstring in magic method
  "D202", # No blank lines allowed after function docstring (found 1)
  "D203", # incorrect-blank-line-before-class
  "D212", # multi-line-summary-first-line
  "D400", # First line should end with a period
  "D401",  # First line of docstring should be in imperative mood: "Converts a given type to the typing module equivalent type."
  "D413",  # Missing blank line after last section ("Raises")
  "D415", # First line should end with a period, question mark, or exclamation point
  "EM101", # Exception must not use a string literal, assign to variable first
  "EM102", # Exception must not use an f-string literal, assign to variable first
  "S112",  # `try`-`except`-`continue` detected, consider logging the exception
  "SIM108", # Use ternary operator `processed_arg = substitutions.get(arg, arg) if isinstance(arg, TypeVar) else arg` instead of `if`-`else`-block
  "TRY003",  # Avoid specifying long messages outside the exception class
]
